--- a/indexv2.html
+++ b/indexv2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -78,6 +78,33 @@
             </a>
         </div>
     </div>
+    <footer class="homepage-footer">
+        <div class="row">
+            <div class="footer-navigation">
+                <h3>Navigasi</h3>
+                <span class="footer-line"></span>
+                <ul>
+                    <li>
+                        <a href="#">Beranda</a>
+                    </li>
+                    <li>
+                        <a href="#">Kontak Kami</a>
+                    </li>
+                    <li>
+                        <a href="#">Mitrablanja</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-clock">
+                <h3>Jam</h3>
+                <span class="footer-line"></span>
+                <iframe class="iframe-clock" scrolling="no" frameborder="no" clocktype="html5"
+                    style="overflow:hidden;border:0;margin:0;padding:0;width:356px;height:180px;"
+                    src="https://www.clocklink.com/html5embed.php?clock=042&timezone=JOG&color=blue&size=356&Title=&Message=&Target=&From=2021,1,1,0,0,0&Color=blue">
+                </iframe>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
