update footer to be responsive

--- a/indexv2.html
+++ b/indexv2.html
@@ -78,24 +78,26 @@
             </a>
         </div>
     </div>
-    <footer class="homepage-footer">
+    <footer class="homepage-footer container-fluid">
         <div class="row">
-            <div class="footer-navigation">
+            <div class="footer-navigation col-xs-6 col-md-3">
                 <h3>Navigasi</h3>
                 <span class="footer-line"></span>
                 <ul>
                     <li>
                         <a href="#">Beranda</a>
                     </li>
+                    <hr>
                     <li>
                         <a href="#">Kontak Kami</a>
                     </li>
+                    <hr>
                     <li>
                         <a href="#">Mitrablanja</a>
                     </li>
                 </ul>
             </div>
-            <div class="footer-clock">
+            <div class="footer-clock col-xs-6 col-md-4">
                 <h3>Jam</h3>
                 <span class="footer-line"></span>
                 <iframe class="iframe-clock" scrolling="no" frameborder="no" clocktype="html5"
