change some rem values to percentage

--- a/indexv2.html
+++ b/indexv2.html
@@ -38,7 +38,7 @@
         <div class="homepage-textbox">
             <h2 class="pic-text">Quality over Quantity LOL</h2>
         </div>
-        <div class="center-button">
+        <div class="center-button container-fluid">
             <button class="learn-more-button">Learn More</button>
         </div>
     </div>
