--- a/indexv2.html
+++ b/indexv2.html
@@ -6,7 +6,7 @@
     <title>Mesindomitra Rekayasa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesv2.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,9 +38,18 @@
         <div class="homepage-textbox">
             <h2 class="pic-text">Quality over Quantity LOL</h2>
         </div>
-        <div class="center-button container-fluid">
-            <button class="learn-more-button">Learn More</button>
+        <div class="center-button">
+            <button class="learn-more-button" onclick="toggleDiv()">Learn More</button>
         </div>
+    </div>
+    <div id="hidden-div">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pellentesque semper nibh ut commodo.
+            Quisque vel lorem sit amet ante sollicitudin commodo ac vitae nisl. Class aptent taciti sociosqu ad litora
+            torquent per conubia nostra, per inceptos himenaeos. Proin rutrum leo erat, nec tempor erat volutpat nec.
+            Nam est urna, viverra a aliquam nec, commodo et mi. Quisque cursus consectetur justo non venenatis. Duis a
+            felis accumsan, pharetra tellus iaculis, sodales leo.
+        </p>
     </div>
     <div class="carousel-profile">
         <p class="cp-para-1">
@@ -110,14 +119,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="./index.js" charset="utf-8"></script>
 </body>
 </html>
