--- a/indexv2.html
+++ b/indexv2.html
@@ -18,11 +18,11 @@
             <div class="collapse navbar-collapse justify-content-end" id="home-navbar">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item active nav-adjustments">
-                        <a class="nav-link" aria-current="page" href="#">Beranda</a>
+                        <a class="nav-link" aria-current="page" href="./indexv2.html">Beranda</a>
                     </li>
                     <div class="dropdown-divider"></div>
                     <li class="nav-item nav-adjustments">
-                        <a class="nav-link" href="#">Kontak Kami</a>
+                        <a class="nav-link" href="./kontak.html">Kontak Kami</a>
                     </li>
                     <div class="dropdown-divider"></div>
                     <li class="nav-item nav-adjustments">
