finish contact page, begin edit of main page

--- a/kontak.html
+++ b/kontak.html
@@ -34,5 +34,77 @@
             </div>
         </div>
     </nav>
+    <div class="container pt-5 pb-5">
+        <div class="row text-center">
+            <div class="col">
+                <a href="https://icons8.com/icon/EEnPFPeiIW8t/whatsapp">
+                    <img class="mt-5" src="https://img.icons8.com/cotton/64/000000/whatsapp--v3.png" />
+                </a>
+                <p class="h5 mt-3 mb-3">Whatsapp</p>
+                <h5 class="h5 mb-7">
+                    Amir F. Hasbullah - 081299996464
+                </h5>
+            </div>
+            <div class="border-vertical-top"></div>
+            <div class="col">
+                <a href="https://icons8.com/icon/UkiL9bbjDJLi/phone-bubble">
+                    <img class="mt-5" src="https://img.icons8.com/cotton/64/000000/phone-bubble--v3.png" />
+                </a>
+                <p class="h5 mt-3 mb-3">Telepon</p>
+                <h5 class="h5 mb-5">555-555-5555</h5>
+            </div>
+        </div>
+        <div class="border-horizontal"></div>
+        <div class="row text-center">
+            <div class="col">
+                <a href="https://icons8.com/icon/114157/secured-letter">
+                    <img class="mt-5" src="https://img.icons8.com/cotton/64/000000/secured-letter--v3.png" />
+                </a>
+                <p class="h5 mt-3 mb-3">E-mail</p>
+                <h5 class="h5 mb-5">itsalie@hotmail.com</h5>
+            </div>
+            <div class="border-vertical-bottom"></div>
+            <div class="col">
+                <a href="https://icons8.com/icon/97555/location">
+                    <img class="mt-5" src="https://img.icons8.com/cotton/64/000000/worldwide-location--v2.png" />
+                </a>
+                <p class="h5 mt-3 mb-3">Alamat</p>
+                <h5 class="h5 mb-5">Jl. Pramuka No. 11/95C, RT 001/RW 017, Kel. Pengasinan, Kec. Rawalumbu, Bekasi</h5>
+            </div>
+        </div>
+    </div>
+    <footer class="homepage-footer container-fluid">
+        <div class="row">
+            <div class="footer-navigation col-xs-6 col-md-3">
+                <h3>Navigasi</h3>
+                <span class="footer-line"></span>
+                <ul>
+                    <li>
+                        <a href="#">Beranda</a>
+                    </li>
+                    <hr>
+                    <li>
+                        <a href="#">Kontak Kami</a>
+                    </li>
+                    <hr>
+                    <li>
+                        <a href="#">Mitrablanja</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-clock col-xs-6 col-md-4">
+                <h3>Jam</h3>
+                <span class="footer-line"></span>
+                <iframe class="iframe-clock" scrolling="no" frameborder="no" clocktype="html5"
+                    style="overflow:hidden;border:0;margin:0;padding:0;width:356px;height:180px;"
+                    src="https://www.clocklink.com/html5embed.php?clock=042&timezone=JOG&color=blue&size=356&Title=&Message=&Target=&From=2021,1,1,0,0,0&Color=blue">
+                </iframe>
+            </div>
+            <div class="credit">
+                <p class="pt-1 pb-1">all icons by <a class="icons8-link" href="https://icons8.com/icon">Icons8</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
