edit homepage picture and textbox

--- a/indexv2.html
+++ b/indexv2.html
@@ -36,7 +36,9 @@
         <img src="./images/CANDIDA_1.jpg" class="giant-pic img-fluid">
         <div class="img-box-shadow img-fluid"></div>
         <div class="homepage-textbox">
-            <h2 class="pic-text">Quality over Quantity LOL</h2>
+            <p class="h1" id="pic-text">
+                <span>Efisien & </span><span class="white-font">Berintegritas</span>
+            </p>
         </div>
         <div class="center-button">
             <button class="learn-more-button" onclick="toggleDiv()">Learn More</button>
