picture change and rework some designs

--- a/kontak.html
+++ b/kontak.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
             <img src="./images/logo-4.png" class="corner-logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#home-navbar"
