--- a/indexv2.html
+++ b/indexv2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light no-bg">
         <div class="container-fluid">
             <img src="./images/logo-4.png" class="corner-logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#home-navbar" aria-controls="#home-navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,91 +33,109 @@
         </div>
     </nav>
     <div class="homepage-pic">
-        <img src="./images/CANDIDA_1.jpg" class="giant-pic img-fluid">
-        <div class="img-box-shadow img-fluid"></div>
-        <div class="homepage-textbox">
+        <img src="./images/homepage.png" class="giant-pic img-fluid">
+        <div class="homepage-textbox container-fluid">
             <p class="h1" id="pic-text">
-                <span>Efisien & </span><span class="white-font">Berintegritas</span>
+                <span class="white-font">Efisien & </span><span>Berintegritas</span>
             </p>
         </div>
         <div class="center-button">
             <button class="learn-more-button" onclick="toggleDiv()">Learn More</button>
         </div>
-    </div>
-    <div id="hidden-div">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pellentesque semper nibh ut commodo.
-            Quisque vel lorem sit amet ante sollicitudin commodo ac vitae nisl. Class aptent taciti sociosqu ad litora
-            torquent per conubia nostra, per inceptos himenaeos. Proin rutrum leo erat, nec tempor erat volutpat nec.
-            Nam est urna, viverra a aliquam nec, commodo et mi. Quisque cursus consectetur justo non venenatis. Duis a
-            felis accumsan, pharetra tellus iaculis, sodales leo.
-        </p>
-    </div>
-    <div class="carousel-profile">
-        <p class="cp-para-1">
-            Proin at ullamcorper nunc, id feugiat nibh. Nulla aliquam vehicula vestibulum. Morbi sagittis ligula in risus
-            condimentum finibus. Nulla condimentum, lorem ut viverra iaculis, eros nisl pellentesque nunc, non volutpat
-            nulla nulla ac mi. Donec ut odio pretium, ultricies sem sit amet, suscipit massa. Nullam vel aliquam sem,
-            non malesuada sapien. Maecenas gravida tortor vel diam finibus, vel vehicula purus dictum. Morbi ac tempor
-            sem. Integer aliquam euismod consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla
-            quis diam justo. Ut consectetur elit vel arcu fringilla, ut tincidunt eros laoreet.
-        </p>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/HOMEPAGEPIC1.png" class="d-block border-radius">
-                </div>
-                <div class="carousel-item">
-                    <img src="./images/HOMEPAGEPIC2.png" class="d-block border-radius">
-                </div>
-                <div class="carousel-item">
-                    <img src="./images/HOMEPAGEPIC3.png" class="d-block border-radius">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <div class="hidden-bg">
+            <div class="left-triangle"></div>
+            <div class="right-triangle"></div>
+        </div>
+        <div class="pb-4" id="hidden-div">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pellentesque semper nibh ut
+                commodo.
+                Quisque vel lorem sit amet ante sollicitudin commodo ac vitae nisl. Class aptent taciti sociosqu ad
+                litora
+                torquent per conubia nostra, per inceptos himenaeos. Proin rutrum leo erat, nec tempor erat volutpat
+                nec.
+                Nam est urna, viverra a aliquam nec, commodo et mi. Quisque cursus consectetur justo non venenatis. Duis
+                a
+                felis accumsan, pharetra tellus iaculis, sodales leo.
+            </p>
         </div>
     </div>
-    <footer class="homepage-footer container-fluid">
-        <div class="row">
-            <div class="footer-navigation col-xs-6 col-md-3">
-                <h3>Navigasi</h3>
-                <span class="footer-line"></span>
-                <ul>
-                    <li>
-                        <a href="#">Beranda</a>
-                    </li>
-                    <hr>
-                    <li>
-                        <a href="#">Kontak Kami</a>
-                    </li>
-                    <hr>
-                    <li>
-                        <a href="#">Mitrablanja</a>
-                    </li>
-                </ul>
+    <div class="wrapper">
+        <div class="carousel-profile">
+            <p class="cp-para-1 pb-5 mb-4">
+                Proin at ullamcorper nunc, id feugiat nibh. Nulla aliquam vehicula vestibulum. Morbi sagittis ligula in risus
+                condimentum finibus. Nulla condimentum, lorem ut viverra iaculis, eros nisl pellentesque nunc, non volutpat
+                nulla nulla ac mi. Donec ut odio pretium, ultricies sem sit amet, suscipit massa. Nullam vel aliquam sem,
+                non malesuada sapien. Maecenas gravida tortor vel diam finibus, vel vehicula purus dictum. Morbi ac tempor
+                sem. Integer aliquam euismod consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla
+                quis diam justo. Ut consectetur elit vel arcu fringilla, ut tincidunt eros laoreet.
+            </p>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/HOMEPAGEPIC1.png" class="d-block img-fluid border-radius">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/HOMEPAGEPIC2.png" class="d-block img-fluid border-radius">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/HOMEPAGEPIC3.png" class="d-block img-fluid border-radius">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <!-- <span class="sr-only">Previous</span> -->
+                </a>
+                <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <!-- <span class="sr-only">Next</span> -->
+                </a>
             </div>
-            <div class="footer-clock col-xs-6 col-md-4">
-                <h3>Jam</h3>
-                <span class="footer-line"></span>
-                <iframe class="iframe-clock" scrolling="no" frameborder="no" clocktype="html5"
-                    style="overflow:hidden;border:0;margin:0;padding:0;width:356px;height:180px;"
-                    src="https://www.clocklink.com/html5embed.php?clock=042&timezone=JOG&color=blue&size=356&Title=&Message=&Target=&From=2021,1,1,0,0,0&Color=blue">
-                </iframe>
-            </div>
+            <p class="cp-para-2 pt-5 mt-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam iaculis euismod augue. Etiam eget
+                fermentum metus, non porta mauris. Donec leo enim, cursus vitae dui accumsan, consequat pellentesque
+                nisl. Praesent vitae nunc sit amet purus lacinia vestibulum sit amet eu purus. Nullam vitae augue nunc.
+                Quisque augue diam, imperdiet quis nisl at, placerat venenatis libero. Fusce mattis, mi non imperdiet
+                blandit, purus nisl pulvinar nisl, in aliquam felis nulla id arcu. Maecenas scelerisque, sem quis
+                placerat mattis, orci felis bibendum nisl, vel condimentum urna mi nec arcu. Suspendisse quis
+                scelerisque nisl.
+            </p>
         </div>
-    </footer>
+        <footer class="homepage-footer container-fluid">
+            <div class="row">
+                <div class="footer-navigation col-xs-6 col-md-3">
+                    <h3>Navigasi</h3>
+                    <span class="footer-line"></span>
+                    <ul>
+                        <li>
+                            <a href="#">Beranda</a>
+                        </li>
+                        <hr>
+                        <li>
+                            <a href="#">Kontak Kami</a>
+                        </li>
+                        <hr>
+                        <li>
+                            <a href="#">Mitrablanja</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-clock col-xs-6 col-md-4">
+                    <h3>Jam</h3>
+                    <span class="footer-line"></span>
+                    <iframe class="iframe-clock" scrolling="no" frameborder="no" clocktype="html5"
+                        style="overflow:hidden;border:0;margin:0;padding:0;width:356px;height:180px;"
+                        src="https://www.clocklink.com/html5embed.php?clock=042&timezone=JOG&color=blue&size=356&Title=&Message=&Target=&From=2021,1,1,0,0,0&Color=blue">
+                    </iframe>
+                </div>
+            </div>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
