--- a/kontak.html
+++ b/kontak.html
@@ -13,21 +13,34 @@
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
             <img src="./images/logo-4.png" class="corner-logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#home-navbar"
-                aria-controls="#home-navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="navbar-dropdown" data-bs-target="#nav-dropdown"
+                aria-controls="#nav-dropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="home-navbar">
-                <ul class="navbar-nav mb-2 mb-lg-0">
+            <div class="justify-content-end" id="nav-main">
+                <ul class="navbar-nav">
                     <li class="nav-item nav-adjustments">
-                        <a class="nav-link" aria-current="page" href="./indexv2.html">Beranda</a>
+                        <a class="nav-link" href="./indexv2.html">Beranda</a>
+                    </li>
+                    <li class="nav-item nav-adjustments active">
+                        <a class="nav-link" href="./kontak.html">Kontak Kami</a>
+                    </li>
+                    <li class="nav-item nav-adjustments">
+                        <a class="nav-link" href="#">Mitrablanja</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="navbar-dropdown bg-light" id="nav-dropdown">
+                <ul>
+                    <li class="mt-3 mb-3">
+                        <a class="nav-link" href="./indexv2.html">Beranda</a>
                     </li>
                     <div class="dropdown-divider"></div>
-                    <li class="nav-item active nav-adjustments">
-                        <a class="nav-link" href="#">Kontak Kami</a>
+                    <li class="active mt-3 mb-3">
+                        <a class="nav-link" href="./kontak.html">Kontak Kami</a>
                     </li>
                     <div class="dropdown-divider"></div>
-                    <li class="nav-item nav-adjustments">
+                    <li class="mt-3 mb-3">
                         <a class="nav-link" href="#">Mitrablanja</a>
                     </li>
                 </ul>
@@ -95,10 +108,10 @@
             <div class="footer-clock col-xs-6 col-md-4">
                 <h3>Jam</h3>
                 <span class="footer-line"></span>
-                <iframe class="iframe-clock" scrolling="no" frameborder="no" clocktype="html5"
+                <!-- <iframe class="iframe-clock" scrolling="no" frameborder="no" clocktype="html5"
                     style="overflow:hidden;border:0;margin:0;padding:0;width:356px;height:180px;"
                     src="https://www.clocklink.com/html5embed.php?clock=042&timezone=JOG&color=blue&size=356&Title=&Message=&Target=&From=2021,1,1,0,0,0&Color=blue">
-                </iframe>
+                </iframe> -->
             </div>
             <div class="credit">
                 <p class="pt-1 pb-1">all icons by <a class="icons8-link" href="https://icons8.com/icon">Icons8</a>
@@ -106,5 +119,12 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    <script src="./index.js" charset="utf-8"></script>
 </body>
 </html>
