adding minor fixes and changes, watch closely as there might be issues

--- a/kontak.html
+++ b/kontak.html
@@ -93,7 +93,7 @@
                 <span class="footer-line"></span>
                 <ul>
                     <li>
-                        <a href="#">Beranda</a>
+                        <a href="./indexv2.html">Beranda</a>
                     </li>
                     <hr>
                     <li>
