--- a/indexv2.html
+++ b/indexv2.html
@@ -18,10 +18,10 @@
             </button>
             <div class="justify-content-end" id="nav-main">
                 <ul class="navbar-nav">
-                    <li class="nav-item nav-adjustments">
+                    <li class="nav-item nav-adjustments active">
                         <a class="nav-link" href="./indexv2.html">Beranda</a>
                     </li>
-                    <li class="nav-item nav-adjustments active">
+                    <li class="nav-item nav-adjustments">
                         <a class="nav-link" href="./kontak.html">Kontak Kami</a>
                     </li>
                     <li class="nav-item nav-adjustments">
@@ -131,7 +131,7 @@
                         </li>
                         <hr>
                         <li>
-                            <a href="#">Kontak Kami</a>
+                            <a href="./kontak.html">Kontak Kami</a>
                         </li>
                         <hr>
                         <li>
